# ticket-please

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.clinerules/: editor-instructions.md
.github/workflows/: README.md  ci.yml  pr-check.yml  pr-validation.yml  release.yml
docs/: overview.md  tech-specs.md
examples/: acceptance-criteria-template.md  definition-of-done-template.md
src/ai/: __init__.py  prompts.py
src/cli/: __init__.py  main.py
src/config/: wizard.py
src/services/: __init__.py
src/ticketplease/: __init__.py  ai.py  cli.py  collector.py  config.py  generator.py  main.py  utils.py
tests/: __init__.py  test_ai_models.py  test_collector.py  test_config.py  test_config_update.py  test_generator.py  test_integration.py  test_multiline_input.py  test_prompts.py  test_ticketplease.py  test_utils.py  test_wizard.py
